polish: Goblin Diplomacy (#2563)
* refactor: modernize

* fix: add quest start dialog step

* test: opt into sidebar test